# vecmath-rs

./: Cargo.toml  README.md
benches/: vecmath_bench.rs
src/: boundingbox2.rs  boundingbox3.rs  cross.rs  dimension2.rs  dimension3.rs  distance.rs  dot.rs  intersection.rs  length.rs  lib.rs  minmax.rs  point2.rs  point3.rs  ray2.rs  ray3.rs  scalar.rs  three_d.rs  transform.rs  transform2.rs  transform3.rs  two_d.rs  union.rs  vector2.rs  vector3.rs
