[package]
name = "vecmath"
description = "Vector math for graphics applications in Rust"
version = "0.1.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jesperdj/vecmath-rs"

[dependencies]
array-macro = "1.0.5"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "vecmath_bench"
harness = false
