[package]
name = "vecmath"
description = "Vector math for graphics applications in Rust"
version = "0.2.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jesperdj/vecmath-rs"

[dependencies]
array-macro = "2.1.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "vecmath_bench"
harness = false
